# Protobuf.Tutorial

./: .gitignore  README.md
data_type_and_encoding/: README.md
data_type_and_encoding/any/: README.md
data_type_and_encoding/any/cxx/: CMakeLists.txt  build_proto.sh  test.cc
data_type_and_encoding/base_128_varint/: README.md  base_128_varint_encode.py
data_type_and_encoding/base_128_varint/cxx/: base_128_varint_encode.py  test.cc
data_type_and_encoding/base_128_varint/proto/: test.proto
data_type_and_encoding/length_delimited/: README.md
data_type_and_encoding/length_delimited/cxx/: test.cc
data_type_and_encoding/map_elements/: README.md
data_type_and_encoding/map_elements/cxx/: test.cc
data_type_and_encoding/non_varint_numbers/: README.md
data_type_and_encoding/non_varint_numbers/cxx/: test.cc
data_type_and_encoding/one_of/: README.md
data_type_and_encoding/one_of/cxx/: test.cc
data_type_and_encoding/proto/: test.proto
data_type_and_encoding/repeated_elements/: README.md
data_type_and_encoding/repeated_elements/cxx/: test.cc
data_type_and_encoding/submessages/: README.md
data_type_and_encoding/submessages/cxx/: Makefile  test.cc
data_type_and_encoding/summarize/: README.md
data_type_and_encoding/zig_zag/: README.md
data_type_and_encoding/zig_zag/cxx/: test.cc  zigzag32.py
doc/: Protocol Buffer Basics_ Python _ Protocol Buffers Documentation.html  Python的基本Protobuf指南(序列化数据) - DaisyLinux - 博客园.html  协议缓冲区基础知识：C++ _ 协议缓冲区文档 - ProtoBuf 中文.html  协议缓冲区基础：Python - DaisyLinux - 博客园.html
doc/Python的基本Protobuf指南(序列化数据) - DaisyLinux - 博客园_files/: blog-common.min.js
doc/协议缓冲区基础知识：C++ _ 协议缓冲区文档 - ProtoBuf 中文_files/: js  s.js
doc/协议缓冲区基础：Python - DaisyLinux - 博客园_files/: blog-common.min.css  bundle-bluesky.min.css  hm.js  js
getting_started/: README.md
getting_started/addressbook/: README.md
getting_started/addressbook/cxx/: .gitignore  CMakeLists.txt  Makefile  add_person.cc  build_proto.sh  create_addressbook.cc  list_people.cc  message_to_json_string.cc  print_to_string.cc  read_from_binary_file.cc  read_from_json_file.cc  read_from_text_file.cc  test.json  test.sh  test.txt  write_to_binary_file.cc  write_to_json_file.cc  write_to_text_file.cc
getting_started/addressbook/python/: .gitignore  add_person.py  build_proto.sh  create_addressbook.py  list_people.py  test.sh
getting_started/addressbook/python/doc/Protocol Buffer Basics_ Python _ Protocol Buffers Documentation_files/: js
getting_started/build_by_cmake/: README.md  build.sh  build_dbg.sh
getting_started/build_by_cmake/examples/: CMakeLists.txt  Makefile  build_by_cmake.sh  build_proto.sh  clean_proto.sh
getting_started/install_by_apt/: README.md
getting_started/person/proto/: person.proto  person_info.proto
getting_started/person/python/: build_proto.sh  serialize.py
installing/build_by_cmake/: README.md  build_dbg.sh  setup.bash
installing/build_by_cmake/examples/: test.txt
